--- a/NasaSpaceApps/Base.lproj/Main.storyboard
+++ b/NasaSpaceApps/Base.lproj/Main.storyboard
@@ -275,7 +275,7 @@
                             <constraint firstItem="xO3-LJ-PKR" firstAttribute="top" secondItem="aQb-9A-P72" secondAttribute="bottom" constant="31" id="pRX-Ly-Wdv"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Details" id="3o7-tR-E2z"/>
+                    <tabBarItem key="tabBarItem" title="Details" image="Details Pane_25" id="3o7-tR-E2z"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hym-2J-VcR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -313,7 +313,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="About Us" id="WlF-Ob-fVB"/>
+                    <tabBarItem key="tabBarItem" title="About Us" image="About_25" id="WlF-Ob-fVB"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a4i-ee-WgM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -513,13 +513,13 @@
             </objects>
             <point key="canvasLocation" x="-12" y="-281"/>
         </scene>
-        <!--Item-->
+        <!--Home-->
         <scene sceneID="Iug-d0-bL2">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="8jG-Xe-BVb" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="kw6-nP-Dnq"/>
+                    <tabBarItem key="tabBarItem" title="Home" image="Rocket_25" id="kw6-nP-Dnq"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="dAa-YO-Es7">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="dAa-YO-Es7">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -532,13 +532,13 @@
             </objects>
             <point key="canvasLocation" x="2055" y="-1387"/>
         </scene>
-        <!--Item-->
+        <!--Schedule-->
         <scene sceneID="DHK-ST-MDz">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ZlJ-qA-iUo" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="lEi-4C-rxH"/>
+                    <tabBarItem key="tabBarItem" title="Schedule" image="Clock_25" id="lEi-4C-rxH"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="p1v-xM-aPb">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="p1v-xM-aPb">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -553,6 +553,10 @@
         </scene>
     </scenes>
     <resources>
+        <image name="About_25" width="25" height="25"/>
+        <image name="Clock_25" width="25" height="25"/>
+        <image name="Details Pane_25" width="25" height="25"/>
+        <image name="Rocket_25" width="25" height="25"/>
         <image name="logo" width="1000" height="827"/>
     </resources>
 </document>
