--- a/NasaSpaceApps/Base.lproj/Main.storyboard
+++ b/NasaSpaceApps/Base.lproj/Main.storyboard
@@ -62,39 +62,82 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2ln-QE-7xU" customClass="ImageSlideshow" customModule="ImageSlideshow">
-                                <rect key="frame" x="10" y="72" width="355" height="260.5"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2ln-QE-7xU" customClass="ImageSlideshow" customModule="ImageSlideshow">
+                                <rect key="frame" x="10" y="72" width="355" height="261"/>
                                 <color key="backgroundColor" red="0.66666666669999997" green="0.66666666669999997" blue="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ER9-ma-Us5">
-                                <rect key="frame" x="24" y="485" width="327" height="33"/>
+                                <rect key="frame" x="24" y="340" width="327" height="33"/>
                                 <color key="backgroundColor" red="0.56794506310000004" green="0.80141055579999998" blue="0.97258389000000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
-                                <state key="normal" title="REGISTER ">
+                                <state key="normal" title="REGISTER NOW">
                                     <color key="titleColor" red="0.20392156859999999" green="0.28627450980000002" blue="0.36862745099999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
                                 <connections>
                                     <segue destination="OZx-yt-Hfu" kind="show" id="PxE-7L-erB"/>
                                 </connections>
                             </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="74" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CfE-mb-CfE">
+                                <rect key="frame" x="10" y="381" width="355" height="229"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="74" id="MLd-Gp-40X">
+                                        <rect key="frame" x="0.0" y="28" width="355" height="74"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="MLd-Gp-40X" id="0gz-NI-it6">
+                                            <rect key="frame" x="0.0" y="0.0" width="355" height="73.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bxa-uL-af5">
+                                                    <rect key="frame" x="28" y="0.0" width="319" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DQ4-j4-wrJ">
+                                                    <rect key="frame" x="28" y="45" width="319" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="DQ4-j4-wrJ" firstAttribute="leading" secondItem="0gz-NI-it6" secondAttribute="leadingMargin" constant="20" id="Ayl-dC-JPg"/>
+                                                <constraint firstItem="bxa-uL-af5" firstAttribute="trailing" secondItem="DQ4-j4-wrJ" secondAttribute="trailing" id="YLo-h9-Y1x"/>
+                                                <constraint firstItem="DQ4-j4-wrJ" firstAttribute="trailing" secondItem="0gz-NI-it6" secondAttribute="trailingMargin" id="YUP-La-elZ"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="DQ4-j4-wrJ" secondAttribute="bottom" constant="-0.5" id="h0g-1R-G3u"/>
+                                                <constraint firstItem="bxa-uL-af5" firstAttribute="leading" secondItem="DQ4-j4-wrJ" secondAttribute="leading" id="wLh-iK-8J4"/>
+                                                <constraint firstItem="bxa-uL-af5" firstAttribute="top" secondItem="0gz-NI-it6" secondAttribute="top" id="zQJ-QZ-ZtV"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="bottomMargin" secondItem="ER9-ma-Us5" secondAttribute="bottom" constant="149" id="2ve-zW-G0Z"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="ER9-ma-Us5" secondAttribute="trailing" constant="8" id="Iec-lh-bm0"/>
-                            <constraint firstItem="ER9-ma-Us5" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" constant="8" id="fN1-lM-u2y"/>
-                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="ER9-ma-Us5" secondAttribute="bottom" constant="100" id="jU5-Pi-x36"/>
+                            <constraint firstItem="ER9-ma-Us5" firstAttribute="top" secondItem="2ln-QE-7xU" secondAttribute="bottom" constant="7" id="4oG-Mw-bOo"/>
+                            <constraint firstItem="ER9-ma-Us5" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" constant="8" id="AaF-Yt-O1h"/>
+                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="ER9-ma-Us5" secondAttribute="bottom" constant="245" id="C7u-6u-Ct4"/>
+                            <constraint firstItem="4ug-Mw-9AY" firstAttribute="top" secondItem="CfE-mb-CfE" secondAttribute="bottom" constant="8" symbolic="YES" id="DrO-ox-URI"/>
+                            <constraint firstItem="2ln-QE-7xU" firstAttribute="leading" secondItem="tsR-hK-woN" secondAttribute="leadingMargin" constant="-6" id="EPX-bQ-XV9"/>
+                            <constraint firstItem="2ln-QE-7xU" firstAttribute="top" secondItem="Ia1-K6-d13" secondAttribute="bottom" constant="8" symbolic="YES" id="QXx-Xm-hUN"/>
+                            <constraint firstItem="CfE-mb-CfE" firstAttribute="leading" secondItem="2ln-QE-7xU" secondAttribute="leading" id="Qo3-TY-FPB"/>
+                            <constraint firstItem="CfE-mb-CfE" firstAttribute="trailing" secondItem="2ln-QE-7xU" secondAttribute="trailing" id="bkh-TT-38e"/>
+                            <constraint firstItem="ER9-ma-Us5" firstAttribute="centerX" secondItem="tsR-hK-woN" secondAttribute="centerX" id="eQ7-ow-KNl"/>
+                            <constraint firstItem="2ln-QE-7xU" firstAttribute="centerX" secondItem="ER9-ma-Us5" secondAttribute="centerX" id="hDC-Fm-frb"/>
+                            <constraint firstItem="CfE-mb-CfE" firstAttribute="top" secondItem="ER9-ma-Us5" secondAttribute="bottom" constant="8" symbolic="YES" id="kzi-sD-8Gt"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Home" id="Ndt-PP-9Om"/>
                     <connections>
                         <outlet property="slideshow" destination="2ln-QE-7xU" id="wdC-Ky-93X"/>
+                        <outlet property="tableview" destination="CfE-mb-CfE" id="asU-qV-Qwd"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3668" y="-1386"/>
+            <point key="canvasLocation" x="3668" y="-1386.656671664168"/>
         </scene>
         <!--Register : NASA Space Apps-->
         <scene sceneID="you-1K-qQx">
@@ -288,7 +331,20 @@
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="D7n-lV-4cG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="separatorColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="sectionIndexBackgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="a78-7l-n60">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="a78-7l-n60" id="CFS-bG-5Cf">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </tableViewCell>
+                        </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="UfV-by-Wdt" id="fgD-0q-2j6"/>
                             <outlet property="delegate" destination="UfV-by-Wdt" id="97E-oR-bVY"/>
@@ -519,7 +575,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="8jG-Xe-BVb" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Home" image="Rocket_25" id="kw6-nP-Dnq"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="dAa-YO-Es7">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="dAa-YO-Es7">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -538,7 +594,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ZlJ-qA-iUo" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Schedule" image="Clock_25" id="lEi-4C-rxH"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="p1v-xM-aPb">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="p1v-xM-aPb">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
